<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ScanActivity">

    <LinearLayout
        android:id="@+id/areaCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout

        android:id="@+id/areaBtnFlash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFlash"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/torchlight" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popupInactivityTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <TextView
            android:id="@+id/textViewCompositionNutritionnelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/problemLight"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/saisieManuelleCodeBarre"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editTextCodeBarre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:maxLength="13"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonValiderCodeBarre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:text="@string/btnValiderSaisieCodeBarre" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
