<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewMessageInterrupt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_margin="10px"
        android:textColor="#ff4d4d"
        android:visibility="gone"
        android:textStyle="bold|italic"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadowfile"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="229dp"
            android:layout_margin="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCodeBarre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textViewBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"/>

            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewProduct"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shadowfile"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/nutriScore" />

        <TextView
            android:id="@+id/textViewInconnueNutriScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

        <ImageView
            android:id="@+id/imageViewNutriScore"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5px"
            android:layout_marginBottom="5px"
            android:layout_weight="1"
            android:visibility="gone"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/store" />

        <Button
            android:id="@+id/buttonIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingredient" />

        <Button
            android:id="@+id/buttonNutriments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nutriment" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/areaDisplayStores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shadowfile"
            android:visibility="gone"
            android:layout_margin="1dp"
            android:animateLayoutChanges="true">

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/areaDisplayIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadowfile"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_margin="1dp"
            android:animateLayoutChanges="true">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/areaDisplayNutrimentsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadowfile"
            android:visibility="gone"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:orientation="horizontal"
            android:animateLayoutChanges="true"></LinearLayout>

        <LinearLayout
            android:id="@+id/areaDisplayNutriments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadowfile"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:animateLayoutChanges="true">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>